Finalisation partie 3