@@ -5,10 +5,10 @@ import org.dataloader.DataLoaderRegistry;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import ucd.fs.client.*;
-import ucd.fs.model.*;
+import ucd.fs.model.User;
+
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
-import java.util.Collections;
 
 @Configuration
 public class DataLoaderConfig {
@@ -25,9 +25,11 @@ public class DataLoaderConfig {
         registry.register("userLoader",
                 DataLoader.newDataLoader(employeeIds ->
                         CompletableFuture.supplyAsync(() -> {
-                            Long employeeId = (Long) employeeIds.get(0); // Cast explicite en Long
-                            return Collections.singletonList(employeeClient.getUserById(employeeId));
+                            Long employeeId = (Long) employeeIds.get(0);
+                            User user = employeeClient.getUserById(employeeId);
+                            return List.of(user);
                         })));
+
 
         registry.register("payrollLoader",
                 DataLoader.newDataLoader(employeeIds ->
